--- a/src/index.html
+++ b/src/index.html
@@ -10,89 +10,23 @@
 
 	<body>
 		<div class="breakpoint"></div>
-		<!-- <img class="mast__image" src="./images/content/eyeball---kbrehm--costume.jpg">  -->
+		<!-- <img class="intro__image" src="./images/content/eyeball---kbrehm--costume.jpg">  -->
 
         <div id="fullpage">
             <div class="section" id="section1">
-                <div class="panel--mast">
-                    <i class="material-icons material-icon__arrow--down">arrow_downward</i>
+                <div class="panel--intro">
+                	{{> arrow }}
 
-                    <img class="mast__image project--perf" src="./images/content/_MP_6321--1600.jpg">
-                    <img class="mast__image project--puppetry" src="./images/content/IMG_1243--1800.jpg">
-                    <img class="mast__image project--events" src="./images/content/_MG_5563--1800.jpg">
-                    <img class="mast__image project--teaches" src="./images/content/_MG_5529--fixed--1800.jpg">
-                    <img class="mast__image project--costume" src="./images/content/eyeball---kbrehm--costume.jpg">
-                    <!-- <img class="mast__image project--off-broadway" src="./images/content/chi-cth-blue-man-group-2017-ct0047554800-20170210.jpg"> -->
-                    <img class="mast__image project--off-broadway" src="./images/content/Blue_Man.gif">
-                    <img class="mast__image project--theater-productions" src="./images/content/slide_sp3.jpg">
-                    <img class="mast__image project--on-broadway" src="./images/content/BB7925.jpg">
-                    <img class="mast__image project--margolis" src="./images/content/margolis-method.jpg">
-                    <img class="mast__image project--explore" src="./images/content/2-1398373234tumblr_n2rah6H0Am1rsdpaso1_500.gif">
-                    <!-- <img class="mast__image project--explore" src="./images/content/3-1398373244tumblr_n4jvn2pfrW1qa4iv8o2_500.gif"> -->
-                    <img class="mast__image project--basil" src="./images/content/symphony--ezgif-5-5f182826b7.gif">
-                    <!-- <video 
-                        class="mast__image i6" 
-                        width="500" 
-                        preload 
-                        muted 
-                        poster="./images/content/basil--poster.jpg"
-                        >
-                        <source src="./videos/dogu--edit-1.webm" type="video/webm"/>
-                        <source src="./videos/dogu--edit-1.mp4" type="video/mp4"/>
-                        <source src="./videos/dogu--edit-1.ogv" type="video/ogg"/>
-                        Your browser doesn't support HTML5 video tag.
-                    </video>
-                    <video 
-                        class="mast__image project--poof" 
-                        width="500" 
-                        preload 
-                        muted 
-                        poster="./images/content/poof--edit--poster.jpg"
-                        >
-                        <source src="./videos/poof--edit.webm" type="video/webm"/>
-                        <source src="./videos/poof--edit.mp4" type="video/mp4"/>
-                        <source src="./videos/poof--edit.ogv" type="video/ogg"/>
-                        Your browser doesn't support HTML5 video tag.
-                    </video> -->
-                    <div class="mast__wrapper">
-                        <p class="mast__text">
-                            <span>Kate Brehm is an artist and movement director specializing in</span>
-                            <a href="#" class="mast__link hover js-hover__puppet">puppetry,</a>
-                            <span>scenic dramaturgy, and </span>
-                            <a href="#" class="mast__link hover js-hover__poof">physical acting.</a>
-                            <br>
-                            <br>
-                            <span>Her company has been producing </span>
-                            <a href="#" class="mast__link hover js-hover__events">events</a> 
-                            <span>and </span>
-                            <a href="#" class="mast__link hover js-hover__theater-productions">theater productions</a>
-                            <span> for over 15 years. She makes </span>
-                            <a href="#" class="mast__link hover js-hover__costumes">costumes,</a>
-                            <span>writes for industry publications,</span>
-                            <a href="#" class="mast__link hover js-hover__teaches">teaches performers,</a>
-                            <span>and creates independent artistic</span> 
-                            <a href="#" class="mast__link hover js-hover__perf">works + performances.</a>
-                            <br  class="hide-xs">
-                            <br  class="hide-xs">
-                            <span class="hide-xs">
-                            Kate tours internationally  with  
-                            </span>
-                            <a href="#" class="hide-xs  mast__link hover js-hover__basil">critically acclaimed</a> 
-                            <span class="hide-xs">puppeteers, works   </span>
-                            <a href="#" class="hide-xs  mast__link hover js-hover__broadway--on">on</a>
-                            <span class="hide-xs"> and</span>
-                            <a href="#" class=" hide-xs  mast__link hover js-hover__broadway--off">off Broadway</a> 
-                            <span class="hide-xs"> and is trained in the </span>
-                            <a href="#" class="hide-xs  mast__link hover js-hover__margolis">Margolis Method</a> 
-                            <span class="hide-xs "> of Physical Acting. </span>
-                            <span class="hide-xs">She is currently </span>
-                            <a href="#" class="hide-xs mast__link hover js-hover__explore">exploring possibilities</a>
-                            <span class="hide-xs">for bridging academic interests
-                            , industry work and an independent art practice.
-                            </span>
+   					<div class="js-hbs-inject--intro__hover-photo-collection">
+                        	<!-- hover-photo-collection.hbs-->
+                    </div>
+
+                    <div class="intro__wrapper">
+                        <p class="js-hbs-inject--intro__paragraph-fragments">
+                        	<!-- paragraph-fragments.hbs-->
                         </p>
                     </div>
-                    <div class="mast__diags"></div>
+                    <div class="intro__diags"></div>
                 </div>
             </div>
             <div class="section" id="section2">
