refactored intro panel, wired json obj to handlebars

--- a/src/index.html
+++ b/src/index.html
@@ -10,19 +10,22 @@
 
 	<body>
 		<div class="breakpoint"></div>
-		<!-- <img class="intro__image" src="./images/content/eyeball---kbrehm--costume.jpg">  -->
+		<!-- <img class="" src="./images/content/eyeball---kbrehm--costume.jpg">  -->
+
+        <div class="intro__image-wrapper
+                    js--hbs-inject--intro__hover-photo-collection">
+                <!-- hover-photo-collection.hbs-->
+        </div>
+
 
         <div id="fullpage">
             <div class="section" id="section1">
                 <div class="panel--intro">
                 	{{> arrow }}
 
-   					<div class="js-hbs-inject--intro__hover-photo-collection">
-                        	<!-- hover-photo-collection.hbs-->
-                    </div>
 
                     <div class="intro__wrapper">
-                        <p class="js-hbs-inject--intro__paragraph-fragments">
+                        <p class="js--hbs-inject--intro__paragraph-fragments">
                         	<!-- paragraph-fragments.hbs-->
                         </p>
                     </div>
