--- a/src/index.html
+++ b/src/index.html
@@ -10,12 +10,6 @@
 
 	<body>
 		<div class="breakpoint"></div>
-		<!-- <img class="" src="./images/content/eyeball---kbrehm--costume.jpg">  -->
-
-        <div class="intro__image-wrapper
-                    js--hbs-inject--intro__hover-photo-collection">
-                <!-- hover-photo-collection.hbs-->
-        </div>
 
 
         <div id="fullpage">
@@ -23,9 +17,13 @@
                 <div class="panel--intro">
                 	{{> arrow }}
 
+                    <div class="intro__image-wrapper
+                                js--hbs-inject--intro__hover-photo-collection">
+                            <!-- hover-photo-collection.hbs-->
+                    </div>
 
-                    <div class="intro__wrapper">
-                        <p class="js--hbs-inject--intro__paragraph-fragments">
+                    <div class="intro__text-wrapper">
+                        <p class="intro__text js--hbs-inject--intro__paragraph-fragments">
                         	<!-- paragraph-fragments.hbs-->
                         </p>
                     </div>
