First pass at nav. Fixed bio animation box on art projects page. Added Movement Director page. Art Projects project type masks, tags, and active counter.

--- a/src/index.html
+++ b/src/index.html
@@ -31,6 +31,39 @@
 
             <div class="section" >
                 <div class="section--bio">
+
+                    <div class="
+                                js--nav__section
+                                js--nav__section--bio
+                                nav__section
+                                nav__section--bio">
+                        <div class="nav__section-line-bg"></div>
+                        <div class="nav__section-line-active"></div>
+
+                        <div class="js--nav__item--previous
+                                    nav__item
+                                    nav__item--previous
+                                    ">
+                            <div class="nav__item-number ">00</div>
+                            <div class="nav__item-label">Intro</div>
+                        </div>
+
+                        <div class="js--nav__item--this
+                                    nav__item
+                                    nav__item--this">
+                            <!-- <div class="nav__item-number">01</div> -->
+                            <div class="nav__item-label
+                                        nav__item-label--this">Bio</div>
+                        </div>
+
+                        <div class="js--nav__item--next
+                                    nav__item
+                                    nav__item--next">
+                            <div class="nav__item-number">02</div>
+                            <div class="nav__item-label">Art Projects</div>
+                        </div>
+                    </div>
+
                     <div class="bio__nav-bg"></div>
                     <div class="bio__nav"></div>
                     <div class="bio__headshot">
@@ -86,9 +119,42 @@
                 </div>
             </div>
 
-
             <div class="section section--art-projects">
-                <div class="js--glide glide">
+                <div class="
+                            js--nav__section
+                            js--nav__section--art-projects
+                            nav__section
+                            nav__section--art-projects">
+                    <div class="nav__section-line-bg"></div>
+                    <div class="nav__section-line-active"></div>
+
+                    <div class="js--nav__item--previous
+                                nav__item
+                                nav__item--previous
+                                ">
+                        <div class="nav__item-number ">02</div>
+                        <div class="nav__item-label">Bio</div>
+                    </div>
+
+                        <div class="js--nav__item--this
+                                    nav__item
+                                    nav__item--this">
+                            <!-- <div class="nav__item-number">01</div> -->
+                            <div class="nav__item-label
+                                        nav__item-label--this">Art Projects</div>
+                        </div>
+
+                    <div class="js--nav__item--next
+                                nav__item
+                                nav__item--next">
+                        <div class="nav__item-number">04</div>
+                        <div class="nav__item-label">What Is?</div>
+                    </div>
+                </div>
+
+                <div class="js--glide 
+                            glide
+                            glide--art-projects">
                     <div class="glide__track 
                                 js--hbs-inject--art-projects__image-collection"  
                          data-glide-el="track">
