Added What is Stub section. Fixed Art Projects tags.

--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,27 @@
         <div id="fullpage">
             <div class="section section--intro">
                 <div class="section--intro">
-                    <div class="js--hbs-inject--arrow"></div>
+
+                    <div class="
+                                js--nav__section
+                                js--nav__section--intro
+                                nav__section
+                                nav__section--intro">
+                        <div class="nav__section-line-bg"></div>
+                        <div class="nav__section-line-active 
+                                    js--nav__section-line-active--intro"></div>
+
+
+                        <div class="js--nav__item--next
+                                    nav__item
+                                    nav__item--next">
+                            <div class="nav__item-number">02</div>
+                            <div class="nav__item-label">Art Projects</div>
+                        </div>
+                    </div>
+
+
+                    <!-- <div class="js--hbs-inject--arrow"></div> -->
 
                     <div class="intro__image-wrapper
                                 js--hbs-inject--intro__hover-image-collection">
@@ -171,7 +191,58 @@
 
                 </div>
             </div>
+
+            <div class="section section--what-is">
+                <div class="section--what-is">
+
+                    <div class="
+                                js--nav__section
+                                js--nav__section--what-is
+                                nav__section
+                                nav__section--what-is">
+                        <div class="nav__section-line-bg"></div>
+                        <div class="nav__section-line-active 
+                                    js--nav__section-line-active--what-is"></div>
+
+
+                        <div class="js--nav__item--previous
+                                    nav__item
+                                    nav__item--previous
+                                    ">
+                            <div class="nav__item-number ">03</div>
+                            <div class="nav__item-label">Art Projects</div>
+                        </div>
+
+                        <div class="js--nav__item--this
+                                    nav__item
+                                    nav__item--this">
+                            <!-- <div class="nav__item-number">01</div> -->
+                            <div class="nav__item-label
+                                        nav__item-label--this">What Is?</div>
+                        </div>
+
+
+                        <div class="js--nav__item--next
+                                    nav__item
+                                    nav__item--next">
+                            <div class="nav__item-number">05</div>
+                            <div class="nav__item-label">Professional Work</div>
+                        </div>
+                    </div>
+
+                    <div class="what-is-wrapper">
+                            <img class="mccloud" src="./images/ui/mccloud.png"
+
+                        <p class="intro__text" >
+                            <h2 class="what-is__headline">
+                            What is a Movement Director?</h2>
+                        </p>
+                    </div>
+                </div>
+            </div>
+
         </div>
+
 
 		<script>
 			if (window.netlifyIdentity) {
