Added projects type menu

--- a/src/index.html
+++ b/src/index.html
@@ -24,6 +24,7 @@
                         <div class="nav__section-line-active 
                                     js--nav__section-line-active--intro"></div>
 
+
                         <div class="js--nav__item--next
                                     nav__item
                                     nav__item--next">
@@ -31,6 +32,7 @@
                             <div class="nav__item-label">Art Projects</div>
                         </div>
                     </div>
+
 
                     <!-- <div class="js--hbs-inject--arrow"></div> -->
 
@@ -159,7 +161,14 @@
                                     nav__item--this">
                             <!-- <div class="nav__item-number">01</div> -->
                             <div class="nav__item-label
-                                        nav__item-label--this">Art Projects</div>
+                                        nav__item-label--this">
+                                    <span>Art Projects</span>
+                                    <div class="projects__tag-types">
+                                        <span class="projects__menu-label">View:</span> 
+                                        <span class="projects__menu-tag">productions</span>
+                                        <span class="projects__menu-tag">events</span>
+                                    </div>
+                            </div>
                         </div>
 
                     <div class="js--nav__item--next
