Switched to Slider projects to avoid looping. Updated menu tags to look like links vs tags, added All.

--- a/src/index.html
+++ b/src/index.html
@@ -167,6 +167,7 @@
                                         <span class="projects__menu-label">View:</span> 
                                         <span class="projects__menu-tag">productions</span>
                                         <span class="projects__menu-tag">events</span>
+                                        <span class="projects__menu-tag active">all</span>
                                     </div>
                             </div>
                         </div>
