--- a/src/index.html
+++ b/src/index.html
@@ -165,9 +165,15 @@
                                     <span>Art Projects</span>
                                     <div class="projects__tag-types">
                                         <span class="projects__menu-label">View:</span> 
-                                        <span class="projects__menu-tag js--projects__menu-toggle">productions</span>
-                                        <span class="projects__menu-tag js--projects__menu-toggle">events</span>
-                                        <span class="projects__menu-tag active js--projects__menu-toggle">all</span>
+                                        <span class="projects__menu-tag 
+                                                    projects__menu-tag--productions
+                                                    js--projects__menu-toggle">productions</span>
+                                        <span class="projects__menu-tag 
+                                                    projects__menu-tag--events
+                                                    js--projects__menu-toggle">events</span>
+                                        <span class="projects__menu-tag 
+                                                    projects__menu-tag--all
+                                                    active js--projects__menu-toggle">all</span>
                                     </div>
                             </div>
                         </div>
