refactoring glide calls. Filter button WIP

--- a/src/index.html
+++ b/src/index.html
@@ -29,7 +29,7 @@
                                     nav__item
                                     nav__item--next">
                             <div class="nav__item-number">02</div>
-                            <div class="nav__item-label">Art Projects</div>
+                            <div class="nav__item-label">Bio</div>
                         </div>
                     </div>
 
