Bio resume downloadable

--- a/src/index.html
+++ b/src/index.html
@@ -132,10 +132,12 @@
                         <span class="caption caption__label">Photo credit</span>
                         <span class="caption caption__text">Ai Weiwei</span>
                     </div> -->
-                    <div class="button--resume-pdf">
+                    <a class="button--resume-pdf" 
+                        href="./images/content/kbrehm-resumeweb.pdf" 
+                        download="Kate Brehm Resume.pdf">
                         View Resume PDF
                         <div class="bio__diags"></div>
-                    </div>
+                    </a>
                 </div>
             </div>
 
