Bio button wired to admin CMS

--- a/src/index.html
+++ b/src/index.html
@@ -132,8 +132,8 @@
                         <span class="caption caption__label">Photo credit</span>
                         <span class="caption caption__text">Ai Weiwei</span>
                     </div> -->
-                    <a class="button--resume-pdf" 
-                        href="./images/content/kbrehm-resumeweb.pdf" 
+                    <a class="button--resume-pdf
+                            js--button--resume-pdf" 
                         download="Kate Brehm Resume.pdf">
                         View Resume PDF
                         <div class="bio__diags"></div>
