--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@
 	<body>
 		<div class="breakpoint"></div>
 
-        <div id="fullpage">
+        <div id="fullpage" class="transition-fade">
             <div class="section section--intro">
                 <div class="section--intro">
 
@@ -29,7 +29,7 @@
                                     nav__item
                                     nav__item--next">
                             <div class="nav__item-number">02</div>
-                            <div class="nav__item-label">Bio</div>
+                            <div class="nav__item-label">Bio </div>
                         </div>
                     </div>
 
@@ -96,6 +96,8 @@
                     <div class="bio__text">
                         <div class="bio__text--mask"></div>
                         <p class="bio__paragraph--large">
+                            <a href="/project1.html">project1</a>
+
                             The primary aim of my art-making is audience affect. I seek to create a visceral sensation of awe in my viewers. I also aspire to provide them an experience of deeply ‘getting it,’ but intellectual understanding is not required. The pursuit of such art has led me to primarily employ methods of visual theater. I am trained as both a physical actor and a puppeteer. I specialize in the dramaturgy of movement, whether it is through humans, puppets, or inanimate objects. 
                         </p>
                         <p  class="bio__paragraph">
