first pass of swup to test file

--- a/src/project1.html
+++ b/src/project1.html
@@ -8,9 +8,9 @@
         <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     </head>
 
-    <body>
+    <body class="project-bg--start">
         <div class="breakpoint"></div>
-        <div id="fullpage" class="transition-fade project-bg">
+        <div id="fullpage" class="transition-fade project-bg--end">
                 project 1
                 <a href="/index.html">index</a>
         </div>
