Fixed index page FOUC

--- a/src/index.html
+++ b/src/index.html
@@ -1,30 +1,51 @@
 <!DOCTYPE html>
-<html dir="ltr" lang="en">
+<html dir="ltr" lang="en" >
 	<head>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-		<script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
-		<link href="https://fonts.googleapis.com/css?family=Eczar:400,500,600,800" rel="stylesheet">
+
+       <!-- 
+            fouc happens in dev bc of Webpack's HMR
+            https://github.com/gmrchk/swup/issues/63
+            https://gist.github.com/johnpolacek/3827270
+            $('body').attr('style', '');
+        -->
+        <style>
+            #fullpage {
+                transition: all 0.2s ease-in-out;
+            }
+        </style>
+
+        <script type="text/javascript">
+            window.addEventListener( 'load', function( event ) {
+                // document.body.removeAttribute("style");
+                    
+                console.log('window load');
+                var fullpage = document.getElementById("fullpage");
+                fullpage.removeAttribute("style");
+            });
+        </script>
+
+        <script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
+        <link href="https://fonts.googleapis.com/css?family=Eczar:400,500,600,800" rel="stylesheet">
         <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 	</head>
 
 	<body>
 		<div class="breakpoint"></div>
 
-        <div id="fullpage" class="transition-fade">
+        <div id="fullpage" style="opacity: 0; visibility: hidden;">
             <div class="section section--intro">
                 <div class="section--intro">
 
-                    <div class="
-                                js--nav__section
+                    <div class= "js--nav__section
                                 js--nav__section--intro
                                 nav__section
                                 nav__section--intro">
                         <div class="nav__section-line-bg"></div>
                         <div class="nav__section-line-active 
                                     js--nav__section-line-active--intro"></div>
-
-
+ 
                         <div class="js--nav__item--next
                                     nav__item
                                     nav__item--next">
@@ -44,6 +65,8 @@
                         <p class="intro__text 
                                   js--hbs-inject--intro__paragraph-fragments">
                         </p>
+                    <a href="/project1.html" style="color: white; margin: 4rem; font-family: sans-serif; ">state</a>
+
                     </div>
                     <div class="intro__diags"></div>
                 </div>
@@ -258,7 +281,6 @@
             </div>
 
         </div>
-
 
 		<script>
 			if (window.netlifyIdentity) {
